Support for pluploader. Require WordPress 3.3
--HG--
extra : convert_revision : svn%3Ac3e66f6f-232e-0410-82ea-bf51f2194cab/trunk%40988

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,8 +2,8 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 = V1.9.0 - sometimes = 
+* NEW : Switch to Plupload, suport now HTML5 Upload
 * TODO : Facebook connector
-* TODO : Switch to Plupload (http://www.plupload.com/) see also http://wordpress.org/extend/plugins/wplupload/
 * TODO : Rework album page for large amount of galleries
 * Changed : Updated to jQuery Cycle Version 2.9995
 * Bugfix : Couldn't use bulk operation for serach results
