Always cache the single pictures
--HG--
extra : convert_revision : svn%3Ac3e66f6f-232e-0410-82ea-bf51f2194cab/trunk%40996

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ by Alex Rabe & NextGEN DEV Team
 * TODO : Facebook connector
 * TODO : Rework album page for large amount of galleries
 * Changed : Updated to jQuery Cycle Version 2.9995
+* Changed : Always cache the single pictures
 * Bugfix : Couldn't use bulk operation for serach results
 
 = V1.8.3 - 07.08.2011 =
