--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,13 @@
 NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
-= V1.9.0 - sometimes = 
-* NEW : Switch to Plupload, suport now HTML5 Upload
+= V2.0.0 - In the future =
 * TODO : Facebook connector
 * TODO : Rework album page for large amount of galleries
+
+= V1.9.0 - sometimes = 
+* NEW : Switch to Plupload, suport now HTML5 Upload
+* NEW : Added client side resize feature
 * Changed : Updated to jQuery Cycle Version 2.9995
 * Changed : Always cache the single pictures
 * Bugfix : Couldn't use bulk operation for serach results
