--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,12 @@
 NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
-= V2.0.0 - In the future =
-* TODO : Facebook connector
-* TODO : Rework album page for large amount of galleries
+= V1.9.1 - 10.12.2011 =
+* Bugfix : Security hardness for untrusted filenames/meta data (THX to Brian St. Pierre)
+* Bugfix : Fixed security vulnerability (TXH to Jon Cave)
+* Bugfix : Load piclens script via other function
+* Bugfix : IE7 script fix for add gallery 
+* Bugfix : IE7/IE8 width set correctly for edit album autocomplete field
 
 = V1.9.0 - 27.11.2011 = 
 * NEW : Keep images transparency for PNG and GIF format
@@ -13,7 +16,7 @@ by Alex Rabe & NextGEN DEV Team
 * NEW : Added new hook ngg_delete_picture
 * Changed : Updated to jQuery Cycle Version 2.9995
 * Changed : Always cache the single pictures, remove option
-* Bugfix : Couldn't use bulk operation for serach results
+* Bugfix : Couldn't use bulk operation for search results
 * Bugfix : Bugfix for Edit thumbnails under IE 8 + 9
 * Bugfix : Allow empty altext in ngg.editImage
 * Bugfix : Various PHP notice fixes
