--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 NextGEN Gallery
 by Photocrati Media
 
+= V1.9.6 - 07.21.2012 =
+* Bugfix: Fixed an issue with users not being able to dismiss the "Photocrati Acquisition Notice"
+* Bugfix: Load Javascript for activating social media pages on NextGEN Gallery pages only.
+* Bugfix: Fix compatibility issue with Simple Facebook Connect
+* Bugfix: Use correct Facebook Page ID in Like button
+
 = V1.9.5 - 07.18.2012 =
 * Changed: Branding changes following Photocrati acquisition (removed donation messages and updated links)
 * Secured: Use WordPress-bundled JavaScript libraries for swfobject and swfupload instead of bundling our own
