--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 NextGEN Gallery
 by Photocrati Media
 
+= V1.9.10 - 12.18.2012 =
+* Fixed:   XML-RPC error displayed when authenticating using WordPress 3.5
+* Fixed:   Restored compatibility with NextGEN Gallery Export Plugin
+* Fixed:   Removed some remaining references to database upgrade code
+
 = V1.9.9 - 12.14.2012 =
 * NEW:	   JW ImageRotator v3.17 is now bundled with the plugin and used by default.
 * Changed: Removed database upgrade code for versions of NextGEN Gallery earlier than 1.9.3
