--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,9 @@ by Photocrati Media
 * Fixed:   XML-RPC error displayed when authenticating using WordPress 3.5
 * Fixed:   Restored compatibility with NextGEN Gallery Export Plugin
 * Fixed:   Removed some remaining references to database upgrade code
+* Fixed:   Deleted galleries within an album are handed gracefully without warning messages
+* Fixed:   Correct use of register_uninstall_hook
+* Fixed:   CSS and usability issues with the TinyMCE window used to display galleries
 
 = V1.9.9 - 12.14.2012 =
 * NEW:	   JW ImageRotator v3.17 is now bundled with the plugin and used by default.
