--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ by Photocrati Media
 * Fixed:   Deleted galleries within an album are handed gracefully without warning messages
 * Fixed:   Correct use of register_uninstall_hook
 * Fixed:   CSS and usability issues with the TinyMCE window used to display galleries
+* Fixed:   Inability to generate new image slugs
 
 = V1.9.9 - 12.14.2012 =
 * NEW:	   JW ImageRotator v3.17 is now bundled with the plugin and used by default.
