--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,18 @@
 NextGEN Gallery
 by Photocrati Media
-= V1.9.11 - 01.28.2012 =
-* NEW:	   Added [nggalbum] shortcode to use when [album] shortcode isn't available, such as with Jetpack installed
-* NEW:	   Added the ability to detect conflicting JS on NGG admin pages and auto-correct. Add "define('NGG_JQUERY_CONFLICT_DETECTION', false);" to wp-config.php to disable.
-* Fixed:   Database tables not being updated when upgrading from 1.9.2 or earlier
-* Fixed:   Deprecation notice when using get_userdatabylogin() function
-* Fixed:   Sorting by alphabetical order
-* Fixed:   E_NOTICE warning when trying to fetch non-existing meta property
-* Fixed:   Fixed warning, "Creating default object from empty value" on album page
-
+= V1.9.11 - 02.12.2013 =
+* NEW:	   Added the ability to detect JQuery conflicts on NGG Admin Pages and auto-resolve
+* Changed: Added "nggalbum" shortcode. Use this when Jetpack is installed.
+* Changed: Using natural sorting algorithm for alphanumeric values
+* Changed: Database schema is automatically updated when out-of-date
+* Fixed:   Empty drop-down for "Page Link To"
+* Fixed:   Alphabetical image sorting
+* Fixed:   Compatibility with Arjuna X theme
+* Fixed:   “Creating default object from empty value” on album page
+* Fixed:   Compatibility issues with PHP 5.4 on album page
+* Fixed:   E_DEPRECATED warning when using get_userdatabylogin() function
+* Fixed:   Removed many E_NOTICE errors
+* Fixed:   Correct use of register_uninstall_hook across all PHP versions
 
 = V1.9.10 - 12.18.2012 =
 * Fixed:   XML-RPC error displayed when authenticating using WordPress 3.5
